# Sequential_Experimental_Design

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DPCostsInsideExpectation.cpp  DPCostsInsideExpectation.h  SARM.cpp  SARM.h  fileRead.cpp  fileRead.h  fileWrite.cpp  fileWrite.h  inputParams.cpp  inputParams.h  inputParams.inp  linearArch.cpp  linearArch.h  main.cpp  main.h  stochasticSearch.cpp  stochasticSearch.h  structDef.cpp  structDef.h  tools.cpp  tools.h  trajectories.cpp  trajectories.h  trajectory.h  userFunctions.cpp  userFunctions.h
util/: evalHermite.m  evalLegendre.m  pp.m
